Update .upptimerc.yml after rotating PAT

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,8 @@ sites:
     url: https://www.whitney.rip
   - name: Jake Runyan Portfolio
     url: https://jake.runyan.dev
+  - name: Jake Runyan Photography
+    url: https://jakesphotos.whitney.rip
   - name: Google
     url: https://www.google.com
   - name: Wikipedia
