--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,11 +25,11 @@ sites:
 
 status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: PWS Upptime
+  introTitle: "PWS Status page is powered by Upptime.
+  introMessage: This status page pulls data into the [GitHub repository](https://github.com/whitney-server/upptime).
   navbar:
     - title: Status
-      href: /
-    - title: GitHub
+      href: /upptime
+    - title: GitHub Repo
       href: https://github.com/$OWNER/$REPO
