--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -26,7 +26,7 @@ sites:
 status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: PWS Upptime
-  introTitle: "PWS Status page is powered by Upptime.
+  introTitle: "PWS Status page is powered by Upptime."
   introMessage: This status page pulls data into the [GitHub repository](https://github.com/whitney-server/upptime).
   navbar:
     - title: Status
